--- a/src/app/EspaceMedecin/authentifier/authentifier.component.html
+++ b/src/app/EspaceMedecin/authentifier/authentifier.component.html
@@ -6,26 +6,26 @@
   <div class="card contentimage">
    <h2 style="margin-top: 2rem">Authentification</h2>
    <div class="card card-form shadow-sm p-3 mb-5 bg-white rounded" >
-     <form style="justify-content: center !important; margin-top: 1.5rem">
+     <form style="justify-content: center !important; margin-top: 1.5rem"  [formGroup]="authenticationForm" (ngSubmit)="loginDoctor()">
 
        <div class="form-group col-md-8 " style="margin: auto" >
 
          <div class="form-row "> <label for="inputEmail4" style="font-size: 14px">Email</label>
         <div style="display: flex; justify-content: center"><i class="bi bi-person-fill" style="color: #0066FF; margin-right: 1rem"></i>
-          <input type="text" class="form-control" id="inputEmail4"></div>
+          <input type="text" class="form-control" id="inputEmail4"  formControlName="email"></div>
        </div>
        </div>
        <div class="form-group col-md-8 " style="margin: auto ; margin-top: 2rem ; " >
 
          <div class="form-row "> <label for="inputpass" style="font-size: 14px">Mot de Passe</label>
            <div style="display: flex; justify-content: center"><i class="bi bi-file-lock2-fill " style=" color: #0066FF; margin-right: 1rem"></i>
-             <input type="text" class="form-control" id="inputpass"></div>
+             <input type="text" class="form-control" id="inputpass" formControlName="password"></div>
          </div>
        </div>
 
        <a href="" style="color: #0066FF; margin-left: 8rem; margin-top: 3rem !important;"  routerLink="/resetPassword" routerLinkActive="active">Mot de passe oublié </a>
        <div class="btn">
-         <button type="submit" class="btn" routerLink="/showProfileMedecin" routerLinkActive="active">Connexion</button>
+         <button type="submit" class="btn" >Connexion</button>
        </div>
        <div class="btn2">
          <button class="btn" routerLink="/inscrire" routerLinkActive="active">Inscription</button>
