--- a/src/app/EspaceMedecin/inscrire/inscrire.component.html
+++ b/src/app/EspaceMedecin/inscrire/inscrire.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="card all-content">
   <div class="zoneRouge">
     <h6>Cette inscription et seulement pour les medecins  ! </h6>
