--- a/src/app/acceuil-content/acceuil-content.component.html
+++ b/src/app/acceuil-content/acceuil-content.component.html
@@ -18,7 +18,10 @@
   </div>
 </div>
 
+<!--a propos de nous-->
+<div>
 
+</div>
 <!--2éme section -->
 <div class="card section2">
 
@@ -35,6 +38,8 @@
     </div>
   </div>
 </div>
+
+
 
 <!-- section 3-->
 
