--- a/src/app/composants/header/header.component.scss
+++ b/src/app/composants/header/header.component.scss
@@ -1,33 +1,7 @@
+*{
 
-    a {
-
-      transition: 0.5s;
-
-      &::after {
-        position: absolute;
-        content: "";
-        top: 100%;
-        left: 0;
-        width: 100%;
-        height: 3px;
-        background: #3498db;
-        transform: scaleX(0);
-        transform-origin: right;
-        transition: transform 0.5s;
-      }
-
-      &:hover {
-        color: #95a5a6;
-      }
-
-      &:hover::after {
-        transform: scaleX(1);
-        transform-origin: left;
-      }
-    }
-
-
-
+  scroll-behavior: smooth;
+}
 a{
     color: #001B35;
 }
@@ -58,5 +32,23 @@ nav{
   margin-top: 0.5rem;
   z-index: 1;
   height: 3rem;
+  background-color: transparent;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 15px 50px;
+  font-size: 17px;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index:1111;
+  transition: .5s ease-in-out;
+  box-shadow: -1px 0px 0px #DDD;
 
+}
+
+nav:active{
+  background: #FFFFFF !important;
+  box-shadow: 1px 0px 0px #DDD;
 }
