adding methode for changing password

--- a/src/app/Admin/profil-admin/profil-admin.component.html
+++ b/src/app/Admin/profil-admin/profil-admin.component.html
@@ -31,7 +31,7 @@
 
     <!-- Heading -->
     <div class="sidebar-heading">
-      Interface
+      Compte Désactivé
     </div>
 
     <!-- Nav Item - Pages Collapse Menu -->
@@ -72,7 +72,7 @@
 
     <!-- Heading -->
     <div class="sidebar-heading">
-      Addons
+      Addons chirurgie
     </div>
 
 
@@ -91,6 +91,32 @@
           <a class="collapse-item" href="modifierchirurgie">Modifier Chirurgie</a>
         </div>
       </div>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+
+    <!-- Heading -->
+    <div class="sidebar-heading">
+      Patient
+    </div>
+    <li class="nav-item">
+      <a class="nav-link" href="listePatient">
+        <i class="fas fa-fw fa-tachometer-alt"></i>
+        <span>Liste des Patients</span></a>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+
+    <!-- Heading -->
+    <div class="sidebar-heading">
+      Medecin
+    </div>
+    <li class="nav-item">
+      <a class="nav-link" href="listeMedecin">
+        <i class="fas fa-fw fa-tachometer-alt"></i>
+        <span>Liste des Médecins</span></a>
     </li>
 
 
