--- a/src/app/EspaceMedecin/authentifier/authentifier.component.html
+++ b/src/app/EspaceMedecin/authentifier/authentifier.component.html
@@ -19,7 +19,7 @@
 
          <div class="form-row "> <label for="inputpass" style="font-size: 14px">Mot de Passe</label>
            <div style="display: flex; justify-content: center"><i class="bi bi-file-lock2-fill " style=" color: #0066FF; margin-right: 1rem"></i>
-             <input type="text" class="form-control" id="inputpass" formControlName="password"></div>
+             <input type="password" class="form-control" id="inputpass" formControlName="password"></div>
          </div>
        </div>
 
