--- a/src/app/EspaceMedecin/inscrire/inscrire.component.scss
+++ b/src/app/EspaceMedecin/inscrire/inscrire.component.scss
@@ -74,3 +74,9 @@ cursor: pointer;
 
 
 }
+.danger{
+  width:14rem ;
+  height: 1.5rem;
+  background-color: rgb(231, 67, 67);
+  color: rgb(155, 25, 25);
+}
