--- a/src/app/EspaceMedecin/profile-medecin/profile-medecin.component.html
+++ b/src/app/EspaceMedecin/profile-medecin/profile-medecin.component.html
@@ -19,7 +19,7 @@
            <li><a href="messagesM"><i class="bi bi-envelope-fill" style="color: white; margin-right: 0.5rem"></i>Messages</a></li>
            <li><a href="dashboardMed"><i class="bi bi-pie-chart-fill" style="color: white; margin-right: 0.5rem"></i>Dashboard</a></li>
            <li><a href="parametreMed"><i class="bi bi-gear-fill" style="color: white; margin-right: 0.5rem"></i>Paramètres</a></li>
-           <li style="margin-top: 5rem"><a href="" (click)="logOut()"><i class="bi bi-box-arrow-left" style="color: white; margin-right:5px" ></i>Déconnexion</a></li>
+           <li style="margin-top: 5rem"><a (click)="logOut()"><i class="bi bi-box-arrow-left" style="color: white; margin-right:5px" ></i>Déconnexion</a></li>
          </ul>
         </div>
       </div>
