--- a/src/app/detail-profile/detail-profileA/update-chirurgie/update-chirurgie.component.html
+++ b/src/app/detail-profile/detail-profileA/update-chirurgie/update-chirurgie.component.html
@@ -24,7 +24,7 @@
       <input formControlName="seconds" type="number" placeholder="Seconds">
     </div></div>
   <div class="row" style="margin-bottom: 2rem;margin-top: 2rem; text-align: center">
-    <button type="reset" class="btn3" data-dismiss="modal"  id="closebtn">Annuler</button>
+    <button type="reset" class="btn3" data-dismiss="modal"  id="closebtn" routerLink="/modifierchirurgie">Annuler</button>
     <button type="submit" class="btn4 " >Enregister</button>
   </div>
 
