--- a/src/app/EspacePatient/profile-patient/profile-patient.component.html
+++ b/src/app/EspacePatient/profile-patient/profile-patient.component.html
@@ -1,154 +1,202 @@
-<nav class="navbar navbar-vertical fixed-left navbar-expand-md navbar-light bg-white" id="sidenav-main">
-  <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidenav-collapse-main" aria-controls="sidenav-main" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand pt-0 text-primary" target="_blank">
-     <b *ngIf="isLoggedIn()"> connecté <i class="bi bi-circle-fill" style="color: green ; font-size: 12px"></i></b>
-      <b *ngIf="!isLoggedIn()"> déconnecté <i class="bi bi-circle-fill" style="color: red ; font-size: 12px"></i></b>
 
-    </a>
-    <ul class="nav align-items-center d-md-none">
-      <li class="nav-item dropdown">
-        <a class="nav-link nav-link-icon" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="ni ni-bell-55"></i>
-        </a>
-        <div class="dropdown-menu dropdown-menu-arrow dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="media align-items-center">
-              <span class="avatar avatar-sm rounded-circle">
-                <img alt="Image placeholder" src="https://demos.creative-tim.com/argon-dashboard/assets-old/img/theme/team-4.jpg">
-              </span>
-          </div>
-        </a>
-        <div class="dropdown-menu dropdown-menu-arrow dropdown-menu-right">
-          <div class=" dropdown-header noti-title">
-            <h6 class="text-overflow m-0">Welcome!</h6>
-          </div>
 
-          <a href="./examples/profile.html" class="dropdown-item">
-            <i class="ni ni-single-02"></i>
-            <span>Mon profile</span>
-          </a>
-          <a href="./examples/profile.html" class="dropdown-item">
-            <i class="ni ni-settings-gear-65"></i>
-            <span>Parametres</span>
-          </a>
+<body id="page-top" >
 
-          <a href="./examples/profile.html" class="dropdown-item">
-            <i class="ni ni-support-16"></i>
-            <span>Support</span>
-          </a>
-          <div class="dropdown-divider"></div>
-          <a href="#!" class="dropdown-item">
-            <i class="ni ni-user-run"></i>
-            <span>Logout</span>
-          </a>
-        </div>
-      </li>
-    </ul>
-    <div class="collapse navbar-collapse" id="sidenav-collapse-main">
-      <div class="navbar-collapse-header d-md-none">
-        <div class="row">
+<!-- Page Wrapper -->
+<div id="wrapper" >
 
-          <div class="col-6 collapse-brand">
-            <a href="javascript:void(0)">
-            Profile Patient
-            </a>
-          </div>
-          <div class="col-6 collapse-close">
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#sidenav-collapse-main" aria-controls="sidenav-main" aria-expanded="false" aria-label="Toggle sidenav">
-              <span></span>
-              <span></span>
-            </button>
-          </div>
-        </div>
-      </div>
+  <!-- Sidebar -->
+  <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar" >
 
-      <ul class="navbar-nav">
+    <!-- Sidebar - Brand -->
 
-        <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)" routerLink="/formuleRndv" routerLinkActive="active">
-            <i class="bi bi-calendar-plus-fill text-primary" ></i> Prendre rendez-vous
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)" routerLink="/messagesfromAdmin" routerLinkActive="active">
-            <i class="bi bi-envelope-fill text-primary"></i>Message
-          </a>
-        </li>
-        <li class="nav-item">
-        <a routerLink="/loginPatient" routerLinkActive="active" class="nav-link" (click)="logOut()">logout</a>
 
-        </li>
+    <!-- Divider -->
+    <hr class="sidebar-divider my-0">
 
-      </ul>
+
+
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+
+    <!-- Heading -->
+    <div class="sidebar-heading " style="margin-top: 4rem">
+      Interface
     </div>
-  </div>
-</nav>
-<div class="main-content">
-  <!-- Top navbar -->
-  <nav class="navbar navbar-tp navbar-expand-md navbar-dark bg-primary" id="navbar-main">
-    <div class="container-fluid">
-      <!-- Brand -->
-      <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="./index.html">Dashboard</a>
-      <!-- User -->
-      <ul class="navbar-nav align-items-center d-none d-md-flex">
-        <li class="nav-item dropdown">
-          <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <div class="media align-items-center">
-                <span class="avatar avatar-sm rounded-circle">
-                  <img alt="Image placeholder" src="https://demos.creative-tim.com/argon-dashboard/assets-old/img/theme/team-4.jpg">
-                </span>
-              <div class="media-body ml-2 d-none d-lg-block">
-                <span class="mb-0 text-sm  font-weight-bold">Jessica Jones</span>
+
+    <!-- Nav Item - Pages Collapse Menu -->
+    <ul class="navbar-nav">
+
+      <li class="nav-item">
+        <a class="nav-link" href="javascript:void(0)" routerLink="/formuleRndv" routerLinkActive="active">
+          <i class="bi bi-calendar-plus-fill text-primary" ></i> Prendre rendez-vous
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="javascript:void(0)" routerLink="/messagesfromAdmin" routerLinkActive="active">
+          <i class="bi bi-envelope-fill text-primary"></i>Message
+        </a>
+      </li>
+
+
+    </ul>
+
+
+    <!-- Divider -->
+    <hr class="sidebar-divider d-none d-md-block">
+
+    <!-- Sidebar Toggler (Sidebar) -->
+    <div class="text-center d-none d-md-inline">
+      <button class="rounded-circle border-0" id="sidebarToggle"></button>
+    </div>
+
+  </ul>
+  <!-- End of Sidebar -->
+
+  <!-- Content Wrapper -->
+  <div id="content-wrapper" class="d-flex flex-column">
+
+    <!-- Main Content -->
+    <div id="content" >
+
+      <!-- Topbar -->
+      <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+
+        <!-- Sidebar Toggle (Topbar) -->
+        <form class="form-inline">
+          <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+            <i class="fa fa-bars"></i>
+          </button>
+        </form>
+
+
+        <!-- Topbar Navbar -->
+        <ul class="navbar-nav ml-auto">
+
+
+          <!-- Nav Item - Messages -->
+
+
+          <!-- Nav Item - User Information -->
+          <li class="nav-item dropdown no-arrow" *ngIf="patient">
+
+
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+              <span class="mr-2 d-none d-lg-inline text-black-50 ">
+                <b *ngIf="isLoggedIn()"> <i class="bi bi-circle-fill" style="color: green ; font-size:10px"></i></b>
+
+                {{patient.firstname}} {{patient.lastname}}</span>
+
+            </a>
+            <!-- Dropdown - User Information -->
+            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                 aria-labelledby="userDropdown">
+              <a class="dropdown-item" href="#">
+                <i class="bi bi-person-fill mr-2 text-gray-400"></i>
+                Profile
+              </a>
+              <a class="dropdown-item" href="#">
+                <i class="bi bi-gear-fill mr-2 text-gray-400"></i>
+                Settings
+              </a>
+
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal" (click)="logOut()">
+                <i class="bi bi-box-arrow-right mr-2 text-gray-400"></i>
+                Logout
+              </a>
+            </div>
+          </li>
+
+        </ul>
+
+      </nav>
+      <!-- End of Topbar -->
+
+      <!-- Begin Page Content -->
+      <div class="container-fluid">
+
+        <!-- Page Heading -->
+        <router-outlet></router-outlet>
+        <!-- DataTales Example -->
+        <!--  <div class="card shadow mb-4">
+            <div class="card-header py-3">
+              <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
+            </div>
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                  <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th>Position</th>
+                    <th>Office</th>
+                    <th>Age</th>
+                    <th>Start date</th>
+                    <th>Salary</th>
+                  </tr>
+                  </thead>
+                  <tfoot>
+                  <tr>
+                    <th>Name</th>
+                    <th>Position</th>
+                    <th>Office</th>
+                    <th>Age</th>
+                    <th>Start date</th>
+                    <th>Salary</th>
+                  </tr>
+                  </tfoot>
+                  <tbody>
+
+                  <tr>
+                    <td>Jackson Bradshaw</td>
+                    <td>Director</td>
+                    <td>New York</td>
+                    <td>65</td>
+                    <td>2008/09/26</td>
+                    <td>$645,750</td>
+                  </tr>
+
+                  <tr>
+                    <td>Bruno Nash</td>
+                    <td>Software Engineer</td>
+                    <td>London</td>
+                    <td>38</td>
+                    <td>2011/05/03</td>
+                    <td>$163,500</td>
+                  </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
-          </a>
-          <div class="dropdown-menu dropdown-menu-arrow dropdown-menu-right">
-            <div class=" dropdown-header noti-title">
-              <h6 class="text-overflow m-0">Welcome!</h6>
-            </div>
-            <a href="./examples/profile.html" class="dropdown-item">
-              <i class="ni ni-single-02"></i>
-              <span>My profile</span>
-            </a>
-            <a href="./examples/profile.html" class="dropdown-item">
-              <i class="ni ni-settings-gear-65"></i>
-              <span>Settings</span>
-            </a>
-            <a href="./examples/profile.html" class="dropdown-item">
-              <i class="ni ni-calendar-grid-58"></i>
-              <span>Activity</span>
-            </a>
-            <a href="./examples/profile.html" class="dropdown-item">
-              <i class="ni ni-support-16"></i>
-              <span>Support</span>
-            </a>
-            <div class="dropdown-divider"></div>
-            <a
-              class="dropdown-item" >
-              <i class="ni ni-user-run"></i>
-              <span  routerLink="/loginPatient" routerLinkActive="active">Logout</span>
-            </a>
           </div>
-        </li>
-      </ul>
+
+
+
+        </div>
+        /.container-fluid -->
+
+
+      </div>
+      <!-- End of Main Content -->
+
+
     </div>
-  </nav>
+    <!-- End of Content Wrapper -->
 
-
-  <!--content-->
-  <div class="container-fluid text-center">
-
-    <router-outlet></router-outlet>
   </div>
+  <!-- End of Page Wrapper -->
 
-</div>
+  <!-- Scroll to Top Button-->
+  <a class="scroll-to-top rounded" href="#page-top">
+    <i class="bi bi-caret-up-square-fill"></i>
+
+  </a>
+
+
+
+
+
+
