--- a/src/app/detail-profile/detail-profileA/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/detail-profile/detail-profileA/dashboard-admin/dashboard-admin.component.html
@@ -1,1 +1,68 @@
-<p>dashboard-admin works!</p>
+<!-- Begin Page Content -->
+<div class="container-fluid">
+
+  <!-- Page Heading -->
+  <h1 class="h3 mb-2 text-gray-800">Dashboard</h1>
+
+
+  <!-- Content Row -->
+  <div class="row">
+
+    <div class="col-xl-8 col-lg-7">
+
+      <!-- Area Chart -->
+      <div class="card shadow mb-4">
+        <div class="card-header py-3">
+          <h6 class="m-0 font-weight-bold text-primary">Nombre des comptes par gendre</h6>
+        </div>
+        <div class="card-body">
+          <div
+            id="doughnut"
+            style="width: 500px; height: 400px; display: block;"
+          >
+          </div>
+
+          <hr>
+          Styling for the area chart
+        </div>
+      </div>
+
+      <!-- Bar Chart -->
+      <div class="card shadow mb-4">
+        <div class="card-header py-3">
+          <h6 class="m-0 font-weight-bold text-primary">Bar Chart</h6>
+        </div>
+        <div class="card-body">
+          <div class="chart-bar">
+            <canvas id="myBarChart"></canvas>
+          </div>
+          <hr>
+          Styling for the bar chart
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Donut Chart -->
+    <div class="col-xl-4 col-lg-5">
+      <div class="card shadow mb-4">
+        <!-- Card Header - Dropdown -->
+        <div class="card-header py-3">
+          <h6 class="m-0 font-weight-bold text-primary">Donut Chart</h6>
+        </div>
+        <!-- Card Body -->
+        <div class="card-body">
+          <div class="chart-pie pt-4">
+            <canvas id="myPieChart"></canvas>
+          </div>
+          <hr>
+          Styling for the donut chart
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+<!-- /.container-fluid -->
+
+<!-- End of Main Content -->
