--- a/src/app/servicePatient/detail-parcours-medc/detail-parcours-medc.component.html
+++ b/src/app/servicePatient/detail-parcours-medc/detail-parcours-medc.component.html
@@ -1,32 +1,34 @@
 <app-header></app-header>
-<div class="col all-content">
-  <div class="card content">
-    <div class="image">
-      <img src="../assets/image/medcin4.jfif">
-    </div>
-    <div class="col">
-     <h2 >Nom de mdecin</h2>
-      <h3 style="margin-bottom: 2rem">Specialite </h3>
-      <div class="parcours" style="float: right ; text-align: justify">
-         <h5 style="color:#1DA1F2">Parcours</h5>
-        <p>detail parcours kjqhefjj,enfkjzneklfngkjznekjgzfojzskl</p>
-        <p>detail parcours jkenbzelkze;,fnzkneklnfknzekjfnkjnfkjzn</p>
-        <p>detail parcours kjqhefjzfolkefnlkznekfln,klzejzskl</p>
-        <p>detail parcours jkenbzkjnkjednejfnzklfzkjfnkjznfkjzn</p>
-      </div>
-      <div class="expérience" style="float: left ; text-align: justify">
-        <h5 style="color:#1DA1F2">Expérience Professionnelle</h5>
-        <p> detail Expérience Professionnelle sidjozjovjfhiuezhvifnskdjvn</p>
-        <p> detail Expérience Pjdvkjdnrofessionnelle jkdfkzjndkfnzsksdjbnfkj </p>
-        <p> detail Expérience Professionnelle jfhiuezhvifnskdjvn</p>
-        <p> detail Expérience Professionnelle jkdfkzelkfnzlkfljndkfnzsksdjbnfkj </p>
-      </div>
+<div class="col allCard>"  >
+
+  <div class="image">
+    <img src="">
+  </div>
+  <div class="card infotxt" >
+    <h4>.firstnam lastname</h4>
+    <h5>specialite</h5>
+
+  </div>
+
+  <div class="col content">
+    <div class="card parcours">
+      <h5 style="text-align: center ; color: #3F6589">Parcours</h5>
+
+
+      <p></p>
 
     </div>
-    <div class="btn">
-      <button onclick="window.location.href ='signPatient';">Prendre Rendez-vous</button>
+
+    <div class="card parcours" style="text-align: justify ; margin-top: 1rem;">
+
+      <h5 style="text-align: center ; color: #3F6589 ;">Expérience Professionnelle</h5>
+
+      <p ></p>
     </div>
 
+  </div>
+  <div class="btn">
+    <button onclick="window.location.href ='signPatient';" >Prendre Rendez-vous</button>
   </div>
 
 </div>
